# efficient-event-processing

./: CMakeLists.txt  lat.json  latency_1.csv  latency_2.csv  latency_4.csv  results.json  summary_table.csv
include/algotrading/core/: Event.hpp  EventBus.hpp
include/algotrading/events/: MarketDataEvent.hpp  OrderEvent.hpp  SystemEvent.hpp
scripts/: plot_results.py
src/benchmarks/: bus_latency.cpp  latency_sampling.cpp
src/core/: EventBus.cpp
tests/: EventBusTests.cpp
